ffi/poc/csharp/src/Harness/GeneratedNounk/Abi.cs


#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_init", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_init__raw(ak_init_opts* opts, ak_err* err);
    internal static long N_ak_init;
    internal static int ak_init(ak_init_opts* opts, ak_err* err) { System.Threading.Interlocked.Increment(ref N_ak_init); return ak_init__raw(opts, err); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_init(ak_init_opts* opts, ak_err* err);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_init(ak_init_opts* opts, ak_err* err);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_initialized", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_initialized__raw();
    internal static long N_ak_initialized;
    internal static int ak_initialized() { System.Threading.Interlocked.Increment(ref N_ak_initialized); return ak_initialized__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_initialized();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_initialized();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_build_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_build_id__raw();
    internal static long N_ak_build_id;
    internal static IntPtr ak_build_id() { System.Threading.Interlocked.Increment(ref N_ak_build_id); return ak_build_id__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_build_id();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_build_id();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_log_test", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_log_test__raw(uint level, byte* msg, nuint len);
    internal static long N_ak_log_test;
    internal static int ak_log_test(uint level, byte* msg, nuint len) { System.Threading.Interlocked.Increment(ref N_ak_log_test); return ak_log_test__raw(level, msg, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_log_test(uint level, byte* msg, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_log_test(uint level, byte* msg, nuint len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_panic_test", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_panic_test__raw();
    internal static long N_ak_panic_test;
    internal static void ak_panic_test() { System.Threading.Interlocked.Increment(ref N_ak_panic_test); ak_panic_test__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_panic_test();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_panic_test();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_abi_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern uint ak_abi_version__raw();
    internal static long N_ak_abi_version;
    internal static uint ak_abi_version() { System.Threading.Interlocked.Increment(ref N_ak_abi_version); return ak_abi_version__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial uint ak_abi_version();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern uint ak_abi_version();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_ctx_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_enc_ctx_new__raw();
    internal static long N_ak_enc_ctx_new;
    internal static IntPtr ak_enc_ctx_new() { System.Threading.Interlocked.Increment(ref N_ak_enc_ctx_new); return ak_enc_ctx_new__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_enc_ctx_new();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_enc_ctx_new();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_ctx_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_enc_ctx_free__raw(IntPtr ctx);
    internal static long N_ak_enc_ctx_free;
    internal static void ak_enc_ctx_free(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_enc_ctx_free); ak_enc_ctx_free__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_enc_ctx_free(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_enc_ctx_free(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_reset", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_enc_reset__raw(IntPtr ctx);
    internal static long N_ak_enc_reset;
    internal static void ak_enc_reset(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_enc_reset); ak_enc_reset__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_enc_reset(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_enc_reset(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_take", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_enc_take__raw(IntPtr ctx, byte** ptr, nuint* len);
    internal static long N_ak_enc_take;
    internal static int ak_enc_take(IntPtr ctx, byte** ptr, nuint* len) { System.Threading.Interlocked.Increment(ref N_ak_enc_take); return ak_enc_take__raw(ctx, ptr, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_enc_take(IntPtr ctx, byte** ptr, nuint* len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_enc_take(IntPtr ctx, byte** ptr, nuint* len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_ctx_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_dec_ctx_free__raw(IntPtr ctx);
    internal static long N_ak_dec_ctx_free;
    internal static void ak_dec_ctx_free(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_dec_ctx_free); ak_dec_ctx_free__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_dec_ctx_free(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_dec_ctx_free(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_fail", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_fail__raw(IntPtr ctx, int code, byte* msg, uint msg_len);
    internal static long N_ak_fail;
    internal static void ak_fail(IntPtr ctx, int code, byte* msg, uint msg_len) { System.Threading.Interlocked.Increment(ref N_ak_fail); ak_fail__raw(ctx, code, msg, msg_len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_fail(IntPtr ctx, int code, byte* msg, uint msg_len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_fail(IntPtr ctx, int code, byte* msg, uint msg_len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_err", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_enc_err__raw(IntPtr ctx);
    internal static long N_ak_enc_err;
    internal static int ak_enc_err(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_enc_err); return ak_enc_err__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_enc_err(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_enc_err(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_err", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_dec_err__raw(IntPtr ctx);
    internal static long N_ak_dec_err;
    internal static int ak_dec_err(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_dec_err); return ak_dec_err__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_dec_err(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_dec_err(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_err_reset", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_dec_err_reset__raw(IntPtr ctx);
    internal static long N_ak_dec_err_reset;
    internal static void ak_dec_err_reset(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_dec_err_reset); ak_dec_err_reset__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_dec_err_reset(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_dec_err_reset(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_tc_utf8", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_tc_utf8__raw();
    internal static long N_ak_tc_utf8;
    internal static IntPtr ak_tc_utf8() { System.Threading.Interlocked.Increment(ref N_ak_tc_utf8); return ak_tc_utf8__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_tc_utf8();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_tc_utf8();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_tc_utf8_trusted", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_tc_utf8_trusted__raw();
    internal static long N_ak_tc_utf8_trusted;
